Compile mobile response.

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ googleAnalytics = ""
 
 [params]
     author = "Luke Mino-Altherr"
-    description = "the ideas, thoughts, and workings of Luke Mino-Altherr."
+    description = "the ideas, thoughts, and workings of a musical engineer."
     copyright = " "
     githubUsername = "luke-mino-altherr"
     accent = "#f2a557"
